corrigindo problema de inversao da rede

--- a/Análise Rede Futebol.ipynb
+++ b/Análise Rede Futebol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,24 +166,22 @@
      "output_type": "stream",
      "text": [
       "Name: \n",
-      "Type: Graph\n",
+      "Type: DiGraph\n",
       "Number of nodes: 234318\n",
-      "Number of edges: 374466\n",
-      "Average degree:   3.1962\n",
-      "Número Componentes 11252\n"
+      "Number of edges: 374599\n",
+      "Average in degree:   1.5987\n",
+      "Average out degree:   1.5987\n"
      ]
     }
    ],
    "source": [
-    "grafo = nx.read_edgelist(PATH_SOCCER+'/retweets_libertadores.edgelist')\n",
-    "print(nx.info(grafo))\n",
-    "n_componentes_old = nx.number_connected_components(grafo)\n",
-    "print(\"Número Componentes\", nx.number_connected_components(grafo))"
+    "grafo = nx.read_edgelist(PATH_SOCCER+'/retweets_libertadores.edgelist',create_using=nx.DiGraph)\n",
+    "print(nx.info(grafo))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -200,12 +198,11 @@
      "output_type": "stream",
      "text": [
       "Name: \n",
-      "Type: Graph\n",
+      "Type: DiGraph\n",
       "Number of nodes: 216554\n",
-      "Number of edges: 331623\n",
-      "Average degree:   3.0627\n",
-      "Número componentes antigo 11252\n",
-      "Número componentes novo 17553\n"
+      "Number of edges: 331741\n",
+      "Average in degree:   1.5319\n",
+      "Average out degree:   1.5319\n"
      ]
     }
    ],
@@ -213,11 +210,40 @@
     "novo_grafo = grafo.copy()\n",
     "novo_grafo.remove_nodes_from(users_suspend_ids)\n",
     "print(nx.info(novo_grafo))\n",
-    "n_componentes_new = nx.number_connected_components(novo_grafo)\n",
     "\n",
-    "print(\"Número componentes antigo\",n_componentes_old)\n",
-    "print(\"Número componentes novo\",n_componentes_new)\n",
-    "# nx.write_edgelist(novo_grafo, \"retweets_libertadores_nao_suspenso.edgelist\",data=False)"
+    "nx.write_edgelist(novo_grafo, \"retweets_libertadores_nao_suspenso.edgelist\",data=False)\n",
+    "nx.write_gml(novo_grafo,\"retweets_libertadores_nao_suspenso.gml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grafo_direct = nx.read_edgelist('retweets_libertadores_nao_suspenso.edgelist',create_using=nx.DiGraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: \n",
+      "Type: DiGraph\n",
+      "Number of nodes: 209215\n",
+      "Number of edges: 331741\n",
+      "Average in degree:   1.5856\n",
+      "Average out degree:   1.5856\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.info(grafo_direct))"
    ]
   }
  ],
